--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "random-access-file": "^1.2.0",
     "single-line-log": "^1.1.0",
     "speedometer": "^1.0.0",
-    "stream-each": "^1.1.0"
+    "stream-each": "^1.1.0",
+    "yolowatch": "^1.0.0"
   },
   "bugs": {
     "url": "https://github.com/maxogden/dat/issues"
