--- a/package.json
+++ b/package.json
@@ -24,10 +24,7 @@
   "license": "BSD-3-Clause",
   "dependencies": {
     "chalk": "^1.1.1",
-    "dat-js": "^3.5.1",
-    "datland-swarm-defaults": "^1.0.2",
-    "discovery-swarm": "^4.0.2",
-    "dns-discovery": "^5.3.4",
+    "dat-js": "joehand/dat-js#TheLinkNet",
     "memdb": "^1.3.1",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
